GRAPH-1781 Look into improving performance of g.E() (#1312)